# mailer

./: .gitignore  README.md  pyproject.toml  smtp_log.txt
mailer/: __init__.py  base.py  cli.py  templates.py  types.py  utils.py
