[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailer"
version = "1.0.0"
description = "A comprehensive, type-safe email sending solution for Nexios applications"
authors = [
    {name = "Chidebele Dunamis", email = "techwithdunamix@gmail.com"}
]
license = "BSD-3-Clause"
homepage = "https://github.com/nexios-labs/nexios"
repository = "https://github.com/nexios-labs/nexios"
documentation = "https://nexios-docs.netlify.app/"
readme = "README.md"
keywords = [
    "email",
    "smtp",
    "mailer",
    "nexios",
    "async",
    "templates",
    "jinja2",
    "type-safe"
]
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.2.3",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
mailer = "mailer.cli:main"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
files = ["mailer"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 